8-ingress/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: moodle
  namespace: moodle
  annotations:
    cloud.google.com/backend-config: '{"default": "ingress-backendconfig"}'
spec:
  selector:
    app: moodle
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
